logs/ecreall.trashcan.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/persistent'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Acquisition'...
Listing './lib/python3.5/site-packages/Acquisition-4.4.4.dist-info'...
Listing './lib/python3.5/site-packages/BTrees'...
Listing './lib/python3.5/site-packages/BTrees/tests'...
Listing './lib/python3.5/site-packages/BTrees-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/ComputedAttribute'...
Listing './lib/python3.5/site-packages/DateTime'...
Listing './lib/python3.5/site-packages/DateTime/tests'...
Listing './lib/python3.5/site-packages/DateTime-4.2.dist-info'...
Listing './lib/python3.5/site-packages/ExtensionClass'...
Listing './lib/python3.5/site-packages/ExtensionClass/pickle'...
Listing './lib/python3.5/site-packages/ExtensionClass-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/MethodObject'...
Listing './lib/python3.5/site-packages/ZConfig'...
Listing './lib/python3.5/site-packages/ZConfig/components'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic/tests'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests/input'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing/extras'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/widget'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo/sample'...
Listing './lib/python3.5/site-packages/ZConfig-3.2.0.dist-info'...
Listing './lib/python3.5/site-packages/ZEO'...
Listing './lib/python3.5/site-packages/ZEO/asyncio'...
Listing './lib/python3.5/site-packages/ZEO/scripts'...
Listing './lib/python3.5/site-packages/ZEO/tests'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4/auth'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4/zrpc'...
Listing './lib/python3.5/site-packages/ZEO-5.1.1.egg-info'...
Listing './lib/python3.5/site-packages/ZODB'...
Listing './lib/python3.5/site-packages/ZODB/FileStorage'...
Listing './lib/python3.5/site-packages/ZODB/scripts'...
Listing './lib/python3.5/site-packages/ZODB/scripts/manual_tests'...
Listing './lib/python3.5/site-packages/ZODB/scripts/tests'...
Listing './lib/python3.5/site-packages/ZODB/tests'...
Listing './lib/python3.5/site-packages/ZODB-5.3.0.egg-info'...
Listing './lib/python3.5/site-packages/ZODB3-3.11.0.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher/tests'...
Listing './lib/python3.5/site-packages/collective.monkeypatcher-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/persistent'...
Listing './lib/python3.5/site-packages/persistent/tests'...
Listing './lib/python3.5/site-packages/persistent-4.2.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/transaction'...
Listing './lib/python3.5/site-packages/transaction/tests'...
Listing './lib/python3.5/site-packages/transaction-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/lockfile'...
Listing './lib/python3.5/site-packages/zc.lockfile-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/zdaemon'...
Listing './lib/python3.5/site-packages/zdaemon/tests'...
Listing './lib/python3.5/site-packages/zdaemon-4.2.0.egg-info'...
Listing './lib/python3.5/site-packages/zodbpickle'...
Compiling './lib/python3.5/site-packages/zodbpickle/pickle_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/pickle_2.py", line 882
    except _Stop, stopinst:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zodbpickle/pickletools_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/pickletools_2.py", line 1803
    print "skipping %r: it doesn't look like an opcode name" % name
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zodbpickle/tests'...
Compiling './lib/python3.5/site-packages/zodbpickle/tests/pickletester_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/tests/pickletester_2.py", line 433
    x = [0, 1L, 2.0, 3.0+0j]
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zodbpickle-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
